--- a/css/grid_section.css
+++ b/css/grid_section.css
@@ -2,9 +2,7 @@
 
 .collection-grid-section {
     /* background: #ffffff; */
-    padding: 24px 20px 60px;
-    margin-top: 70px;
-    margin-bottom: 50px;
+    padding: 70px 22px 100px 22px;
 }
 
 .collection-grid {
